# QVideo

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DVRdemo.py  LICENSE.md  QBasicDVR.py  QBasicDVR.ui  QCamcorder.py  QCameraWidget.py  QNoiseSource.py  QOpenCVCamera.py  QOpenCVWidget.py  QOpenCVWidget.ui  QSpinnakerCamera.py  QSpinnakerWidget.py  QSpinnakerWidget.ui  QVideoCamera.py  QVideoScreen.py  README.md  ROIdemo.py  TODO.md  __init__.py  __main__.py  demo.py  filterdemo.py  probe_spinnaker_gentl.py  pyproject.toml  requirements.in  requirements.txt  version.py
.github/workflows/: publish.yml  test.yml  update-citation.yml
cameras/: choose_camera.py
cameras/Basler/: .gitignore  QBaslerTree.py  __init__.py  _camera.py  _tree.py
cameras/Flir/: .gitignore  QFlirCamera.py  QFlirCamera.py~  QFlirSource.py  QFlirTree.py  QFlirTree.py~  QListFlirCameras.py  Untitled.ipynb  __init__.py  _camera.py  _tree.py  description.pkl
cameras/Flir/producer/Darwin/3.10/: Spinnaker_GenTL.cti
cameras/Flir/producer/Linux/3.12/: Spinnaker_GenTL.cti
cameras/Genicam/: .gitignore  QGenicamCamera.py  QGenicamCamera.py~  QGenicamSource.py  QGenicamSource.py~  QGenicamTree.py  QGenicamTree.py~  Untitled.ipynb  __init__.py  _camera.py  _tree.py  explorecamera.ipynb  mvGenTLProducer_3.5.1.cti  nodemap.py  nodemap.py~
cameras/Genicam/old/: mvGenTLProducer.cti
cameras/Genicam/vimbax/: README
cameras/IDS/: .gitignore  QIDSTree.py  __init__.py  _camera.py  _tree.py
cameras/MV/: .gitignore  QMVCamera.py  QMVTree.py  __init__.py  _tree.py
cameras/Noise/: QNoiseCamera.py  QNoiseSource.py  QNoiseTree.py  QNoiseWidget.py  QNoiseWidget.ui  __init__.py  _camera.py  _tree.py
cameras/OpenCV/: QListCVCameras.py  QOpenCVCamera.py  QOpenCVResolutionTree.py  QOpenCVSource.py  QOpenCVTree.py  QOpenCVWidget.py  __init__.py  _camera.py  _devices.py  _resolution_tree.py  _tree.py
cameras/Picamera/: QPicamera.py  QPicamera.py~  QPicameraTree.py  __init__.py  __init__.py~  _camera.py  _tree.py
cameras/Spinnaker/: QSpinnakerCamera.py  QSpinnakerInterface.py  QSpinnakerTree.py  QSpinnakerWidget.py  QSpinnakerWidget.ui  __init__.py
cameras/Spinnaker2/: QSpinnakerCamera.py
cameras/Vimbax/: QVimbaXCamera.py  QVimbaXTree.py  __init__.py  _camera.py  _tree.py
demos/: ROIdemo.py  __init__.py  circulardemo.py  compositedemo.py  demo.py  filterdemo.py  filterrackdemo.py  histogramdemo.py  resdemo.py  trackpydemo.py  uniformitydemo.py  yolodemo.py
devel/Spinnaker/: QSpinnakerSource.py
devel/Spinnaker2/: QSpinnakerSource.py  QSpinnakerTree.py
docs/: architecture.rst  conf.py  diatom3.avi  extending.rst  index.rst  jupyter.rst  quickstart.rst  requirements.txt
docs/_static/: nyu.css
docs/api/: cameras.rst  demos.rst  dvr.rst  filters.rst  lib.rst  overlays.rst
dvr/: QAVIPlayer.py  QAVIReader.py  QAVISource.py  QAVIWriter.py  QCircularBuffer.py  QCircularDVRWidget.py  QDVR.py  QDVRWidget.py  QDVRWidget.ui  QHDF5Player.py  QHDF5Reader.py  QHDF5Source.py  QHDF5Writer.py  QMKVWriter.py  QMP4Writer.py  QOpenCVReader.py  QOpenCVWriter.py  QVideoPlayer.py  QVideoWriter.py  __init__.py  icons_rc.py  icons_rc_qt6.py
filters/: BlurFilter.py  EdgeFilter.py  FastMedian.py  FilterBank.py  Median.py  MoMedian.py  Normalize.py  QBlobFilter.py  QBlurFilter.py  QCircleTransformFilter.py  QEdgeFilter.py  QFilterBank.py  QForegroundEstimator.py  QRGBFilter.py  QROIFilter.py  QSampleHold.py  QSmoothingFilter.py  QThresholdFilter.py  QYOLOFilter.py  RGBFilter.py  SampleHold.py  _MedianBase.py  __init__.py  artistic.py  blob.py  circletransform.py  darkframe.py  dejitter.py  dog.py  edge.py  exposure.py  flatfield.py  foreground.py  gamma.py  laplacian.py  median.py  momean.py  momedian.py  normalize.py  rgb.py  (+6 more)
filters/devel/: McClintock.py  OMedian.py  Untitled.ipynb  VMedian.py
lib/: AsyncVideoFilter.py  QCamera.py  QCameraList.py  QCameraTree.py  QCameraWidget.py  QFPSMeter.py  QFilterBank.py  QFilterRack.py  QHistogramWidget.py  QListCameras.py  QReader.py  QResolutionControl.py  QSnapshot.py  QUniformityWidget.py  QVideoCamera.py  QVideoFilter.py  QVideoReader.py  QVideoScreen.py  QVideoSource.py  QVideoWriter.py  VideoFilter.py  __init__.py  _camera.py  _jupyter.py  chooser.py  clickable.py  resolutions.py  types.py  videotypes.py
memory/: MEMORY.md  architecture.md  conventions.md  genicam.md  project-status.md  project_overlay_feature2.md  pypi-publish-guide.md  related-projects.md  todo-v3.1.0.md  todo.md
overlays/: __init__.py  trackpy.py  yolo.py
tests/: conftest.py  test_artistic.py  test_asyncvideofilter.py  test_blob.py  test_camera.py  test_chooser.py  test_circletransform.py  test_circularbuffer.py  test_circulardemo.py  test_circulardvrwidget.py  test_clickable.py  test_compositedemo.py  test_darkframe.py  test_dejitter.py  test_demo.py  test_dog.py  test_edge.py  test_exposure.py  test_filter_export.py  test_filterdemo.py  test_filterrackdemo.py  test_flatfield.py  test_foreground.py  test_gamma.py  test_histogramdemo.py  test_histogramwidget.py  test_icons_rc.py  test_jupyter.py  test_laplacian.py  test_median.py  test_momean.py  test_momedian.py  test_normalize.py  test_qavireader.py  test_qaviwriter.py  test_qbaslercamera.py  test_qblobfilter.py  test_qblurfilter.py  test_qcamcorder.py  test_qcamera.py  (+60 more)
