[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QVideo"
version = "3.0.0"
description = "PyQt-based framework for integrating video cameras into research applications"
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
dependencies = [
    "h5py",
    "numba",
    "numpy",
    "opencv-python",
    "PyQt5",
    "PyQt5-sip",
    "pyqtgraph",
]

[project.optional-dependencies]
genicam = ["harvesters", "genicam"]
picamera = ["picamera2"]
dev = ["pytest", "pytest-cov"]
docs = ["furo", "sphinx", "sphinx-autodoc-typehints"]

[tool.setuptools]
packages = [
    "QVideo",
    "QVideo.cameras",
    "QVideo.cameras.Flir",
    "QVideo.cameras.Genicam",
    "QVideo.cameras.Noise",
    "QVideo.cameras.OpenCV",
    "QVideo.cameras.Picamera",
    "QVideo.cameras.Spinnaker",
    "QVideo.cameras.Spinnaker2",
    "QVideo.cameras.Vimbax",
    "QVideo.dvr",
    "QVideo.filters",
    "QVideo.lib",
]

[tool.setuptools.package-dir]
"QVideo"                    = "."
"QVideo.cameras"            = "cameras"
"QVideo.cameras.Flir"       = "cameras/Flir"
"QVideo.cameras.Genicam"    = "cameras/Genicam"
"QVideo.cameras.Noise"      = "cameras/Noise"
"QVideo.cameras.OpenCV"     = "cameras/OpenCV"
"QVideo.cameras.Picamera"   = "cameras/Picamera"
"QVideo.cameras.Spinnaker"  = "cameras/Spinnaker"
"QVideo.cameras.Spinnaker2" = "cameras/Spinnaker2"
"QVideo.cameras.Vimbax"     = "cameras/Vimbax"
"QVideo.dvr"                = "dvr"
"QVideo.filters"            = "filters"
"QVideo.lib"                = "lib"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["QVideo"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/docs/*",
    "*/dvr/icons_rc_qt6.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@classmethod",
]
show_missing = true
