[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QVideo"
version = "3.2.0"
description = "PyQt-based framework for integrating video cameras into research applications"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [
    { name = "David G. Grier", email = "david.grier@nyu.edu" },
]
keywords = [
    "camera", "video", "imaging", "PyQt5", "scientific",
    "GenICam", "GigE Vision", "raspberry pi",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "h5py",
    "numba",
    "numpy",
    "opencv-python",
    "PyQt5",
    "PyQt5-sip",
    "pyqtgraph",
]

[project.urls]
Homepage = "https://github.com/davidgrier/QVideo"
Repository = "https://github.com/davidgrier/QVideo"
"Bug Tracker" = "https://github.com/davidgrier/QVideo/issues"

[project.optional-dependencies]
genicam = ["harvesters", "genicam"]
picamera = ["picamera2"]
dev = ["pytest", "pytest-cov"]
docs = ["furo", "sphinx", "sphinx-autodoc-typehints"]

[tool.setuptools]
packages = [
    "QVideo",
    "QVideo.cameras",
    "QVideo.cameras.Basler",
    "QVideo.cameras.Flir",
    "QVideo.cameras.Genicam",
    "QVideo.cameras.IDS",
    "QVideo.cameras.MV",
    "QVideo.cameras.Noise",
    "QVideo.cameras.OpenCV",
    "QVideo.cameras.Picamera",
    "QVideo.cameras.Vimbax",
    "QVideo.dvr",
    "QVideo.filters",
    "QVideo.lib",
]

[tool.setuptools.package-dir]
"QVideo"                    = "."
"QVideo.cameras"            = "cameras"
"QVideo.cameras.Basler"     = "cameras/Basler"
"QVideo.cameras.Flir"       = "cameras/Flir"
"QVideo.cameras.Genicam"    = "cameras/Genicam"
"QVideo.cameras.IDS"        = "cameras/IDS"
"QVideo.cameras.MV"         = "cameras/MV"
"QVideo.cameras.Noise"      = "cameras/Noise"
"QVideo.cameras.OpenCV"     = "cameras/OpenCV"
"QVideo.cameras.Picamera"   = "cameras/Picamera"
"QVideo.cameras.Vimbax"     = "cameras/Vimbax"
"QVideo.dvr"                = "dvr"
"QVideo.filters"            = "filters"
"QVideo.lib"                = "lib"


[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["QVideo"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/docs/*",
    "*/dvr/icons_rc_qt6.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@classmethod",
]
show_missing = true
